infrastructure/node-main/ns-media/base/radarr/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: media-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr
  ports:
    - name: http
      port: 7878
      targetPort: http
      protocol: TCP
