infrastructure/node-main/ns-media/base/radarr/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: http
